--- a/style.css
+++ b/style.css
@@ -4,80 +4,70 @@
   --accent: SpringGreen;
   --ui-width: 43.75rem;
   --octaves: 1;
-  --gap-y: 2rem;
-}
+  --gap-y: 2rem; }
 
 @media (min-width: 86rem) {
   :root {
-    --octaves: 2;
-  }
-}
+    --octaves: 2; } }
 @media (min-width: 132rem) {
   :root {
-    --octaves: 3;
-  }
-}
+    --octaves: 3; } }
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   color: var(--fg);
   font-family: "Press Start 2P", monospace;
-  line-height: 1.3em;
-}
-body:before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--bg);
-  background-image: linear-gradient(160deg, var(--bg) 30%, var(--accent) 200%);
-  z-index: -1;
-}
+  line-height: 1.3em; }
+  body:before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--bg);
+    background-image: linear-gradient(160deg, var(--bg) 30%, var(--accent) 200%);
+    z-index: -1; }
 
 [hidden] {
-  display: none;
-}
+  display: none; }
 
 header {
   display: flex;
   max-width: var(--ui-width);
   align-items: center;
   gap: 1ch;
-  margin: 0 auto 24px;
-}
+  margin: 0 auto 24px; }
 
 a {
-  color: white;
-}
+  color: white; }
 
 .controls {
-  max-width: var(--ui-width);
+  max-width: calc(var(--ui-width) * var(--octaves));
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-}
-.controls-box {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: var(--gap-y);
-}
-.controls [type=radio] {
-  display: none;
-}
-.controls [type=radio] + label {
-  display: inline-block;
-}
-.controls [type=radio]:checked + label {
-  color: var(--accent);
-}
-.controls .range label {
-  display: inline-block;
-  width: 7ch;
-}
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
+  .controls-box {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: var(--gap-y); }
+  .controls [type="radio"] {
+    display: none; }
+    .controls [type="radio"] + label {
+      display: inline-block; }
+    .controls [type="radio"]:checked + label {
+      color: var(--accent); }
+  .controls select {
+    width: 7ch;
+    font: inherit;
+    border: none;
+    color: inherit;
+    background: var(--bg);
+    padding: 0.4rem; }
+  .controls .option label {
+    display: inline-block;
+    width: 7ch; }
 
 .error {
   position: absolute;
@@ -91,11 +81,9 @@ a {
   background: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  z-index: 10;
-}
-.error[open] {
-  display: flex;
-}
+  z-index: 10; }
+  .error[open] {
+    display: flex; }
 
 .keyboard {
   position: relative;
@@ -103,77 +91,62 @@ a {
   justify-items: stretch;
   max-width: calc(var(--ui-width) * var(--octaves));
   margin: auto;
-  user-select: none;
-}
-.keyboard button {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 1rem;
-  font-family: "Press Start 2P", monospace;
-  border: 1px solid black;
-  font-size: 0;
-  text-transform: uppercase;
-}
-.keyboard button.white {
-  flex: 1 0 calc(100% / (12 * var(--octaves)));
-  max-height: 50vw;
-  height: 18rem;
-  background-color: white;
-  color: grey;
-  margin: 0 2px;
-}
-.keyboard button.white + button.white {
-  margin-left: -1px;
-}
-.keyboard button.white:focus:not(.active) {
-  background: orchid;
-  outline: none;
-}
-.keyboard button.black {
-  flex: 1 0 calc(100% / (12 * var(--octaves)) * 0.4);
-  max-height: 30vw;
-  height: 11rem;
-  margin-left: calc(100% / (12 * var(--octaves)) * -0.5 - 4px);
-  margin-right: calc(100% / (12 * var(--octaves)) * -0.5 - 4px);
-  z-index: 1;
-  background-color: black;
-  border-left-color: white;
-  border-right-color: white;
-  border-bottom-color: white;
-  color: darkgrey;
-}
-.keyboard button.black:focus:not(.active) {
-  background: darkorchid;
-  outline: none;
-}
-.keyboard button.active {
-  background: linear-gradient(160deg, var(--bg) -150%, var(--accent) 100%);
-  color: var(--bg);
-  outline: none;
-}
+  user-select: none; }
+  .keyboard button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 1rem;
+    font-family: "Press Start 2P", monospace;
+    border: 1px solid black;
+    font-size: 0;
+    text-transform: uppercase; }
+    .keyboard button.white {
+      flex: 1 0 calc(100% / (12 * var(--octaves)));
+      max-height: 50vw;
+      height: 18rem;
+      background-color: white;
+      color: grey;
+      margin: 0 2px; }
+      .keyboard button.white + button.white {
+        margin-left: -1px; }
+      .keyboard button.white:focus:not(.active) {
+        background: orchid;
+        outline: none; }
+    .keyboard button.black {
+      flex: 1 0 calc(100% / (12 * var(--octaves)) * 0.4);
+      max-height: 30vw;
+      height: 11rem;
+      margin-left: calc(100% / (12 * var(--octaves)) * -0.5 - 4px);
+      margin-right: calc(100% / (12 * var(--octaves)) * -0.5 - 4px);
+      z-index: 1;
+      background-color: black;
+      border-left-color: white;
+      border-right-color: white;
+      border-bottom-color: white;
+      color: darkgrey; }
+      .keyboard button.black:focus:not(.active) {
+        background: darkorchid;
+        outline: none; }
+    .keyboard button.active {
+      background: linear-gradient(160deg, var(--bg) -150%, var(--accent) 100%);
+      color: var(--bg);
+      outline: none; }
 
 footer {
   max-width: var(--ui-width);
   margin: var(--gap-y) auto 0;
   text-align: center;
-  font-size: 0.75rem;
-}
+  font-size: 0.75rem; }
 
 @media (min-width: 48rem) {
   .keyboard button {
-    font-size: 1.2em;
-  }
-}
+    font-size: 1.2em; } }
 @media (max-width: 85.999rem) {
   .md {
-    display: none !important;
-  }
-}
+    display: none !important; } }
 @media (max-width: 131.999rem) {
   .lg {
-    display: none !important;
-  }
-}
+    display: none !important; } }
 
 /*# sourceMappingURL=style.css.map */
