--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,11 @@ body {
 		right: 0;
 		bottom: 0;
 		background-color: var(--bg);
-		background-image: linear-gradient(160deg, var(--bg) 30%, var(--accent) 200%);
+		background-image: linear-gradient(
+			160deg,
+			var(--bg) 30%,
+			var(--accent) 200%
+		);
 		z-index: -1;
 	}
 }
@@ -58,7 +62,7 @@ a {
 }
 
 .controls {
-	max-width: var(--ui-width);
+	max-width: calc(var(--ui-width) * var(--octaves));
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -81,7 +85,16 @@ a {
 		}
 	}
 
-	.range {
+	select {
+		width: 7ch;
+		font: inherit;
+		border: none;
+		color: inherit;
+		background: var(--bg);
+		padding: 0.4rem;
+	}
+
+	.option {
 		label {
 			display: inline-block;
 			width: 7ch;
@@ -164,7 +177,11 @@ a {
 		}
 
 		&.active {
-			background: linear-gradient(160deg, var(--bg) -150%, var(--accent) 100%);
+			background: linear-gradient(
+				160deg,
+				var(--bg) -150%,
+				var(--accent) 100%
+			);
 			color: var(--bg);
 			outline: none;
 		}
