--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: "Press Start 2P";
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(press-start-2p-latin-400-normal.woff2) format("woff2");
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
+		U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 :root {
 	--bg: DarkSlateGrey;
 	--fg: white;
@@ -36,11 +46,7 @@ body {
 		right: 0;
 		bottom: 0;
 		background-color: var(--bg);
-		background-image: linear-gradient(
-			160deg,
-			var(--bg) 30%,
-			var(--accent) 200%
-		);
+		background-image: linear-gradient(160deg, var(--bg) 30%, var(--accent) 200%);
 		z-index: -1;
 	}
 }
@@ -179,11 +185,7 @@ a {
 		}
 
 		&.active {
-			background: linear-gradient(
-				160deg,
-				var(--bg) -150%,
-				var(--accent) 100%
-			);
+			background: linear-gradient(160deg, var(--bg) -150%, var(--accent) 100%);
 			color: var(--bg);
 			outline: none;
 		}
