--- a/src/style.css
+++ b/src/style.css
@@ -270,11 +270,11 @@ button:not(:is(.black, .white)) {
 
 .audioTrack {
 	display: grid;
-	grid-template-columns: 7ch auto 7ch 3rem 3rem;
+	grid-template-columns: 7ch auto 7ch 3rem 3rem 3rem;
 	grid-template-rows: 1fr 1fr;
 	grid-template-areas:
-		"in out loop del down"
-		"play audio audio audio audio";
+		"in out mute loop del down"
+		"play audio audio audio audio audio";
 	gap: 0 1rem;
 	align-items: center;
 	width: 100%;
@@ -286,9 +286,9 @@ button:not(:is(.black, .white)) {
 	}
 
 	@media (min-width: 86rem) {
-		grid-template-columns: 7ch 3rem auto 7ch 3rem 3rem 3rem;
+		grid-template-columns: 7ch 3rem auto 7ch 3rem 3rem 3rem 3rem;
 		grid-template-rows: auto;
-		grid-template-areas: "in play audio out loop del down";
+		grid-template-areas: "in play audio out mute loop del down";
 		gap: 1rem;
 	}
 
@@ -362,9 +362,22 @@ button:not(:is(.black, .white)) {
 		}
 	}
 
+	[data-audio-ctrl="mute"] {
+		position: relative;
+		cursor: pointer;
+
+		input {
+			position: absolute;
+			top: -400%;
+			left: -100%;
+			transform: rotate(-90deg);
+		}
+	}
+
 	[data-audio-ctrl="save"] {
 		&[data-loading="true"] {
 			opacity: 0.5;
+			pointer-events: none;
 		}
 	}
 }
