--- a/src/style.css
+++ b/src/style.css
@@ -8,24 +8,38 @@
 		U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@keyframes slide-in {
+	from {
+		opacity: 0;
+		transform: translateX(5rem);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
 :root {
 	--bg: DarkSlateGrey;
 	--fg: white;
 	--accent: SpringGreen;
 	--ui-width: 43.75rem; /* 700px */
 	--octaves: 1;
+	--slider-width: 100%;
 	--gap-y: 2rem;
 }
 
 @media (min-width: 86rem) {
 	:root {
 		--octaves: 2;
+		--slider-width: 56%;
 	}
 }
 
 @media (min-width: 132rem) {
 	:root {
 		--octaves: 3;
+		--slider-width: 50%;
 	}
 }
 
@@ -78,7 +92,7 @@ header {
 }
 
 a {
-	color: white;
+	color: var(--fg);
 }
 
 .controls-slider {
@@ -92,6 +106,7 @@ a {
 	gap: 1rem;
 	overflow-x: scroll;
 	scroll-snap-type: x mandatory;
+	transition: width 0.2s ease-out;
 
 	> * {
 		flex: 0 0 auto;
@@ -100,20 +115,42 @@ a {
 }
 
 .synth-controls {
-	width: 100%;
+	flex: 1 0 var(--slider-width);
 	max-width: 100%;
 	display: flex;
 	gap: 2rem;
 	justify-content: center;
+	transition: opacity 0.7s ease-out;
+
+	&.slide-in {
+		animation: slide-in 0.7s ease-out;
+	}
+
+	&:first-of-type {
+		padding-left: calc((100% - var(--slider-width)) / 2);
+		flex-basis: calc((100% - var(--slider-width)) / 2 + var(--slider-width));
+	}
+
+	&:last-of-type {
+		padding-right: calc((100% - var(--slider-width)) / 2);
+		flex-basis: calc((100% - var(--slider-width)) / 2 + var(--slider-width));
+	}
 }
 
 .add-remove-synths {
 	max-width: calc(var(--ui-width) * var(--octaves));
 	margin: 1rem auto 2rem;
 
+	#remove-synth {
+		transform: translateX(0);
+		transition: opacity 0.1s ease-out, transform 0.1s ease-out;
+	}
+
 	.controls-slider:has(.synth-controls:only-of-type) + & {
 		#remove-synth {
-			display: none;
+			opacity: 0;
+			transform: translateX(-6px);
+			pointer-events: none;
 		}
 	}
 }
@@ -206,7 +243,7 @@ a {
 			flex: 1 0 calc(100% / (12 * var(--octaves)));
 			max-height: 50vw;
 			height: 18rem;
-			background-color: white;
+			background-color: var(--fg);
 			color: grey;
 			margin: 0 2px;
 
