--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,17 @@
 	}
 }
 
+@keyframes slide-in-top {
+	from {
+		opacity: 0;
+		transform: translateY(2rem);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
 :root {
 	--bg: DarkSlateGrey;
 	--fg: white;
@@ -136,8 +147,8 @@ a {
 	justify-content: center;
 	transition: opacity 0.7s ease-out;
 
-	&.slide-in {
-		animation: slide-in 0.7s ease-out;
+	&.slide-in-left {
+		animation: slide-in-left 0.7s ease-out;
 	}
 
 	&:first-of-type {
@@ -213,23 +224,35 @@ a {
 	}
 }
 
-.error {
+dialog {
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	inset: 2rem;
 	display: none;
 	align-items: center;
 	justify-content: center;
-	background: rgba(0, 0, 0, 0.7);
-	backdrop-filter: blur(5px);
-	-webkit-backdrop-filter: blur(5px);
 	z-index: 10;
+	animation: slide-in-top 0.4s ease-out;
+
+	&::backdrop {
+		background: rgba(0, 0, 0, 0.5);
+		backdrop-filter: blur(5px);
+		-webkit-backdrop-filter: blur(5px);
+	}
 
 	&[open] {
-		display: flex;
+		display: block;
 	}
+
+	.buttons {
+		display: flex;
+		justify-content: center;
+		gap: 1rem;
+		margin-top: 2rem;
+	}
+}
+
+body:has(dialog[open]) {
+	overflow: hidden;
 }
 
 .keyboard {
