--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,10 @@
 	touch-action: manipulation;
 }
 
+html {
+	overscroll-behavior: none;
+}
+
 body {
 	color: var(--fg);
 	background-color: var(--bg);
@@ -74,6 +78,8 @@ body {
 		right: 0;
 		bottom: 0;
 		background-image: linear-gradient(160deg, var(--bg) 30%, var(--accent) 200%);
+		background-image: linear-gradient(180deg, var(--bg) 0rem, transparent 5rem),
+			linear-gradient(160deg, var(--bg) 30%, var(--accent) 200%);
 		z-index: -1;
 	}
 }
@@ -217,6 +223,11 @@ a {
 		color: inherit;
 		background: var(--bg);
 		padding: 0.4rem;
+
+		&[disabled] {
+			opacity: 0.5;
+			pointer-events: none;
+		}
 	}
 
 	& .option {
